...
                            ) : null}
                        </View>
                    )}
                </View>

                <FlatList
                    testID="movies-flatlist"
                    data={movies}
                    renderItem={renderMovieItem}
                    keyExtractor={(item, index) => `${item?.id}-${index}`}
                    numColumns={2}
                    columnWrapperStyle={styles.columnWrapper}
                    contentContainerStyle={styles.list}
...
